--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .mainHeader, .subHeader {
-  display: $base-flex;
+  display: flex;
+  justify-content: space-between;
   border: $border;
-
 }
 
 /*
