Basic layout with flex

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,11 @@
-.mainHeader, .subHeader {
+.mainHeader {
   display: flex;
   justify-content: space-between;
   border: $border;
+}
+
+.subHeader {
+ text-align: center;
 }
 
 /*
