--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -2,7 +2,7 @@
 $base-font-family: 'Merriweather', serif;
 
 // layout:
-$border: 1px dotted green;
+$border: 1px dotted red;
 
 // focus:
 %focus {
@@ -11,3 +11,5 @@ $border: 1px dotted green;
     border: 2px solid #ed145b;
   }
 }
+
+
