--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -1,22 +1,24 @@
-@mixin grid {
-  display: -ms-grid;
+//.wrapper {
+//  border: 1px dotted grey;
+//  max-width: 100%;
+//  margin: 0 auto;
+//  padding: 0 10px;
+//
+//  @include media(sm) {
+//    max-width: 90%;
+//  }
+//  @include media(md) {
+//    max-width:  80%;
+//  }
+//}
+
+.main-container {
   display: grid;
-}
-
-// Check grid branch again
-
-.wrapper {
-  border: 1px dotted grey;
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 0 10px;
-
-  @include media(sm) {
-    max-width: 90%;
-  }
-  @include media(md) {
-    max-width:  80%;
-  }
+  grid-template-columns: auto 90% auto;
+  grid-template-rows: 15% auto;
+  grid-template-areas:
+    "header header header"
+    ". listing .";
 }
 
 
