--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -1,8 +1,9 @@
-.image-container {
+.listing {
+  grid-area: listing;
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .image-box {
@@ -10,6 +11,5 @@
   margin-top: 1em;
   min-width: 200px;
   min-height: 200px;
-
 }
 
