--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -1,9 +1,18 @@
 body {
   font-family: $base-font-family;
-  width: 100vw;
-  height: 100vh;
 }
 
 img {
   max-width: 100%;
+}
+
+.wrapper {
+  border: 1px dotted grey;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 0.5em;
+
+  @include media(sm) {
+    max-width: 90%;
+  }
 }
