--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -1,5 +1,6 @@
 body {
   font-family: $base-font-family;
+  margin-top: 40px; // dla fixed header
 }
 
 img {
@@ -7,7 +8,6 @@ img {
 }
 
 .wrapper {
-  border: 1px dotted grey;
   max-width: 100%;
   margin: 0 auto;
   padding: 0 0.5em;
