--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -35,29 +35,40 @@ ul {
   padding: 0 0.5em; }
   @media screen and (min-width: 767px) {
     .wrapper {
-      max-width: 90%; } }
-
-.header {
-  background-color: darkgrey; }
+      max-width: 90%;
+      display: flex;
+      background-color: #ed145b; } }
 
 .header__main {
-  background-color: #ed145b;
+  background-color: darkgrey;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   height: 40px;
-  padding: 0 0.5em; }
+  padding: 0 0.5em;
+  z-index: 900; }
 
-.header_sub {
-  background-color: aqua;
-  text-align: center;
-  display: none; }
+.header__searchBtn {
+  margin-right: auto; }
   @media screen and (min-width: 767px) {
-    .header_sub {
+    .header__searchBtn {
+      display: none; } }
+
+.header__menuBtn {
+  margin-left: auto; }
+  @media screen and (min-width: 767px) {
+    .header__menuBtn {
+      display: none; } }
+
+.header__sub {
+  background-color: aqua;
+  display: none; }
+  @media screen and (min-width: 1200px) {
+    .header__sub {
       display: block;
       height: 30px; } }
 
@@ -67,6 +78,9 @@ ul {
   flex-wrap: wrap;
   justify-content: center;
   position: relative; }
+  @media screen and (min-width: 767px) {
+    .list {
+      width: 80%; } }
 
 .list__card {
   border: 1px solid blue;
@@ -98,13 +112,15 @@ ul {
     right: 10em; } }
 .nav {
   display: flex;
-  align-items: center;
-  height: 15em;
+  align-items: flex-start;
+  height: 100%;
   width: 10em;
-  top: 40px;
-  background-color: #333333;
   opacity: 0.8;
   position: fixed; }
+  @media screen and (min-width: 767px) {
+    .nav {
+      position: static;
+      width: 20%; } }
 
 .hidden {
   display: none; }
@@ -134,10 +150,9 @@ ul {
 .nav__box {
   background-color: blue;
   height: 80%;
-  width: 100%;
   display: flex;
   align-items: flex-start;
-  justify-content: center; }
+  position: fixed; }
 
 .nav__list {
   background-color: white;
