--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -16,7 +16,7 @@ ul {
   max-width: 100%;
   margin: 0 auto;
   padding: 0 0.5em;
-  @include media(sm) {
+  @include media(md) {
     max-width: 90%;
     display: flex;
     background-color: #ed145b;
