--- a/src/styles/utils/_mediaMixin.scss
+++ b/src/styles/utils/_mediaMixin.scss
@@ -1,8 +1,8 @@
 // media breakpoints
 $breakpoints: (
-        'sm'  : 767px,
-        'md' : 992px,
-        'lg'  : 1200px
+        'md'  : 767px,
+        'lg' : 992px,
+        'xl'  : 1200px
 );
 
 @mixin media($type) {
