--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -1,6 +1,7 @@
 body {
   font-family: $base-font-family;
   margin-top: 40px; // dla fixed header
+  background-color: $base-bkg-color;
 }
 
 img {
@@ -19,6 +20,5 @@ ul {
   @include media(md) {
     max-width: 90%;
     display: flex;
-    background-color: #ed145b;
   }
 }
