--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,12 +4,19 @@
   font-weight: 500; }
 
 .header__searchBtn, .header__menuBtn {
-  background-color: #f4f4f4;
-  border-radius: 5px;
-  border-color: #1c1c1c;
+  color: #1c1c1c;
   font-family: "Raleway", sans-serif;
+  background-color: #f4f4f4;
+  text-align: center;
+  border-radius: 5px;
+  border: 0.5px solid #e7e7e7;
   font-size: 1em;
-  padding: 0.2em 1em; }
+  padding: 0.2em 1em;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer; }
+  .header__searchBtn:hover, .header__menuBtn:hover {
+    background-color: #e7e7e7; }
 
 /*
 aside.primary {
