--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import './components/header';
 @import './components/listing';
 @import './components/menu';
+@import './components/listItem';
 
 
 
