--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -4,6 +4,10 @@ $base-font-family: 'Raleway', sans-serif;
 // layout:
 $border: 1px dotted red;
 
+// sizes:
+$base-header-height: 70px;
+$xl-header-height: 100px;
+
 // color:
 $base-bkg-color: #f4f4f4;
 $header-bkg-color: #e2e2e2;
