--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -40,8 +40,11 @@ aside.primary {
  */
 body {
   font-family: "Raleway", sans-serif;
-  margin-top: 40px;
+  margin-top: 70px;
   background-color: #f4f4f4; }
+  @media screen and (min-width: 1200px) {
+    body {
+      margin-top: 100px; } }
 
 img {
   max-width: 100%; }
@@ -66,13 +69,12 @@ ul {
   top: 0;
   left: 0;
   right: 0;
-  height: 40px; }
+  height: 70px; }
   @media screen and (min-width: 1200px) {
     .header {
       height: 100px; } }
 
 .header__main {
-  padding: 0 1em;
   display: grid;
   grid-template-columns: auto 1fr auto;
   justify-items: center;
@@ -113,12 +115,6 @@ ul {
   @media screen and (min-width: 767px) {
     .list {
       width: 80%; } }
-
-.list__card {
-  border: 1px solid blue;
-  margin: 1em;
-  min-width: 200px;
-  min-height: 200px; }
 
 .slide-in {
   right: 10em;
@@ -192,5 +188,36 @@ ul {
 
 .nav__item {
   padding: 1em; }
+
+.listItem {
+  background-color: #fff;
+  max-width: 280px;
+  margin: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all .2s ease-in-out;
+  -webkit-box-shadow: 3px 3px 22px 1px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 3px 3px 22px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 3px 22px 1px rgba(0, 0, 0, 0.5); }
+  .listItem:hover {
+    z-index: 901;
+    transform: scale(1.05); }
+    .listItem:hover .listItem__name::after {
+      width: 100%; }
+
+.listItem__imgContainer {
+  padding: 1em 1em 0 1em; }
+
+.listItem__name::after {
+  content: '';
+  display: block;
+  background-color: #1c1c1c;
+  height: 1px;
+  width: 0;
+  transition: ease-out 0.3s; }
+
+.listItem__tagline {
+  margin-top: 0; }
 
 /*# sourceMappingURL=main.css.map */
