--- a/src/styles/components/_listItem.scss
+++ b/src/styles/components/_listItem.scss
@@ -5,12 +5,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
   transition: all .2s ease-in-out;
   -webkit-box-shadow: 3px 3px 22px 1px rgba(0,0,0,0.5);
   -moz-box-shadow: 3px 3px 22px 1px rgba(0,0,0,0.5);
   box-shadow: 3px 3px 22px 1px rgba(0,0,0,0.5);
   &:hover {
-    z-index: 901;
     transform: scale(1.05);
     .listItem__name::after {
       width: 100%
@@ -18,18 +18,9 @@
   }
 }
 
-.listItem__imgContainer {
-  padding: 1em 1em 0 1em;
-}
-
 .listItem__name {
   &::after {
-    content: '';
-    display: block;
-    background-color: $black;
-    height: 1px;
-    width: 0;
-    transition: ease-out 0.3s;
+    @extend %btn-underline
   }
 }
 
