--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -3,7 +3,7 @@ body {
   margin-top: $base-header-height; // dla fixed header
   background-color: $base-bkg-color;
   @include media(xl) {
-    margin-top: $xl-header-height;
+    margin-top: $xl-header-height;  // dla fixed header
   }
 }
 
@@ -14,9 +14,11 @@ img {
 ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 .wrapper {
+  display: flex;
   max-width: 100%;
   margin: 0 auto;
   padding: 0 0.5em;
