--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -10,25 +10,25 @@
 
 // only for mobile
 .slide-in {
-  right: 10em;
-  -webkit-animation: slide-in 1s forwards;
-  animation: slide-in 1s forwards;
+  left: 10em;
+  -webkit-animation: slide-in 0.8s forwards;
+  animation: slide-in 0.8s forwards;
 }
 @-webkit-keyframes slide-in {
-  100% { right: 0 }
+  100% { left: 0 }
 }
 @keyframes slide-in {
-  100% { right: 0 }
+  100% { left: 0 }
 }
 
 .slide-out {
-  right: 0;
-  -webkit-animation: slide-out 1s forwards;
-  animation: slide-out 1s forwards;
+  left: 0;
+  -webkit-animation: slide-out 0.8s forwards;
+  animation: slide-out 0.8s forwards;
 }
 @-webkit-keyframes slide-out {
-  100% { right: 10em }
+  100% { left: 10em }
 }
 @keyframes slide-out {
-  100% { right: 10em }
+  100% { left: 10em }
 }
