--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -31,12 +31,18 @@ $grey: #e7e7e7;
   border: 0.5px solid $grey;
   font-size: 1em;
   padding: 0.2em 1em;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
   cursor: pointer;
-    &:hover {
-      background-color: $grey;
-    }
+}
+
+%btn-underline {
+  content: '';
+  display: block;
+  background-color: $black;
+  height: 1px;
+  width: 0;
+  transition: ease-out 0.3s;
 }
 
 
