--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -7,6 +7,7 @@ $border: 1px dotted red;
 // sizes:
 $base-header-height: 70px;
 $xl-header-height: 100px;
+$nav-width: 10em;
 
 // color:
 $base-bkg-color: #f4f4f4;
