--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -184,17 +184,19 @@ ul {
     width: 100%; }
 
 /* only for mobile view - nav sliding in and out */
-.nav__box--hidden,
-.nav__overlay--hidden {
+.nav__box--hidden {
   display: none; }
+
+.nav__overlay--hidden {
+  opacity: 0; }
 
 .nav__overlay--hide {
   opacity: 0;
-  transition: opacity 0.1s linear; }
+  transition: opacity 0.1s ease-in; }
 
 .nav__overlay--show {
   opacity: 0.7;
-  transition: opacity 0.8s linear; }
+  transition: opacity 0.8s ease-in; }
 
 /* for box */
 .nav__box--hide {
